issue: Redactor z-index
This addresses an issue where the Action drop downs, if long enough, will
appear behind the Redactor toolbar. This adds a `z-index` property of `1` to
Redactor toolbar so it appears in the background.

--- a/css/redactor.css
+++ b/css/redactor.css
@@ -436,7 +436,8 @@
     display: none; }
 
 .redactor-toolbar-wrapper {
-  position: relative; }
+  position: relative;
+  z-index: 1; }
 
 .redactor-toolbar,
 .redactor-air {
